--- a/static/user.css
+++ b/static/user.css
@@ -9,14 +9,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    min-width: 1300px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background-color: antiquewhite;
 }
 
 .dashboard {
-    min-width: 1200px;
-    width: 1200px;
+    width: 100%;
+    height: 90%;
+    min-height: 1000px;
+    overflow: hidden;
     padding: 2.5% 4%;
     background-color: azure;
     color: rgb(14, 51, 83);
@@ -24,6 +28,7 @@ body {
 
 .dashboard .pane {
     display: flex;
+    overflow: hidden;
 }
 
 .dashboard .pane .left-pane {
@@ -33,6 +38,7 @@ body {
     border: #15251c;
     outline: #15251c;
     width: 100%;
+    height: 900px;
 }
 
 .dashboard .pane .left-pane .my-robopet .robopet{
@@ -92,6 +98,7 @@ body {
     border: #15251c;
     outline: #15251c;
     width: 100%;
+    overflow: auto;
 }
 
 .dashboard .pane .right-pane .robopet-list .robopet{
