--- a/templates/login.html
+++ b/templates/login.html
@@ -13,12 +13,13 @@
     <div class="container">
       <h1>RoboPety</h1>
       <br />
-      <form action="/login" method="post">
+      <form id="loginForm" method="post">
         <h3>Email</h3>
         <div class="input-box">
           <input
             type="text"
             placeholder="Email"
+            id="email"
             name="email"
             value="{{
             request.form.email }}"
@@ -29,6 +30,7 @@
           <input
             type="password"
             placeholder="Password"
+            id="'password"
             name="password"
             value="{{
             request.form.password }}"
@@ -40,9 +42,8 @@
       <div class="register-link">
         <p>Don't have an account? <a href="/signup">signup</a></p>
       </div>
-      {% if error %}
-      <p class="error">{{ error }}</p>
-      {% endif %}
+      <p class="error" id="errorText"></p>
     </div>
   </body>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </html>
